--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "postcss": "^8.4.31",
     "autoprefixer": "^10.4.16"
   },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
