--- a/package.json
+++ b/package.json
@@ -5,21 +5,20 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "lucide-react": "^0.263.1",
+    "lucide-react": "^0.469.0",
     "@fortawesome/fontawesome-free": "^6.5.1",
-    "react-scripts": "5.0.1",
     "tailwindcss": "^3.4.1",
     "postcss": "^8.4.31",
     "autoprefixer": "^10.4.16"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.0"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "vite": "^4.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "vite build",
+    "test": "echo \"No test specified\" && exit 0"
   },
   "eslintConfig": {
     "extends": [
